[gd_scene load_steps=22 format=2]

[ext_resource path="res://assets/scripts/environment/object/dynamic/gate/Gate.gd" type="Script" id=1]
[ext_resource path="res://assets/sprites/environment/object/dynamic/gate/gateopen_00.png" type="Texture" id=2]
[ext_resource path="res://assets/sprites/environment/object/dynamic/gate/gateopen_01.png" type="Texture" id=3]
[ext_resource path="res://assets/sprites/environment/object/dynamic/gate/gateopen_02.png" type="Texture" id=4]
[ext_resource path="res://assets/sprites/environment/object/dynamic/gate/gateopen_03.png" type="Texture" id=5]
[ext_resource path="res://assets/sprites/environment/object/dynamic/gate/gateopen_04.png" type="Texture" id=6]
[ext_resource path="res://assets/sprites/environment/object/dynamic/gate/gateopen_05.png" type="Texture" id=7]
[ext_resource path="res://assets/sprites/environment/object/dynamic/gate/gateopen_06.png" type="Texture" id=8]
[ext_resource path="res://assets/sprites/environment/object/dynamic/gate/gateopen_07.png" type="Texture" id=9]
[ext_resource path="res://assets/sprites/environment/object/dynamic/gate/gateopen_08.png" type="Texture" id=10]
[ext_resource path="res://assets/sprites/environment/object/dynamic/gate/gateopen_09.png" type="Texture" id=11]
[ext_resource path="res://assets/sprites/environment/object/dynamic/gate/gateopen_10.png" type="Texture" id=12]
[ext_resource path="res://assets/sprites/environment/object/dynamic/gate/gateopen_11.png" type="Texture" id=13]
[ext_resource path="res://assets/sprites/environment/object/dynamic/gate/gateopen_12.png" type="Texture" id=14]
[ext_resource path="res://assets/sprites/environment/object/dynamic/gate/gateopen_13.png" type="Texture" id=15]
[ext_resource path="res://assets/sprites/environment/object/dynamic/gate/gateopen_16.png" type="Texture" id=16]
[ext_resource path="res://assets/sprites/environment/object/dynamic/gate/gateopen_17.png" type="Texture" id=17]
[ext_resource path="res://assets/sprites/environment/object/dynamic/gate/gateopen_18.png" type="Texture" id=18]
[ext_resource path="res://assets/sprites/environment/object/dynamic/gate/gate.png" type="Texture" id=19]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 2 ), ExtResource( 3 ), ExtResource( 4 ), ExtResource( 5 ), ExtResource( 6 ), ExtResource( 7 ), ExtResource( 8 ), ExtResource( 9 ), ExtResource( 10 ), ExtResource( 11 ), ExtResource( 12 ), ExtResource( 13 ), ExtResource( 14 ), ExtResource( 15 ), ExtResource( 16 ), ExtResource( 17 ), ExtResource( 18 ) ],
"loop": false,
"name": "opening",
"speed": 100.0
}, {
"frames": [ ExtResource( 18 ), ExtResource( 17 ), ExtResource( 16 ), ExtResource( 15 ), ExtResource( 14 ), ExtResource( 13 ), ExtResource( 12 ), ExtResource( 11 ), ExtResource( 10 ), ExtResource( 9 ), ExtResource( 8 ), ExtResource( 7 ), ExtResource( 6 ), ExtResource( 5 ), ExtResource( 4 ), ExtResource( 3 ), ExtResource( 2 ) ],
"loop": false,
"name": "closing",
"speed": 70.0
}, {
"frames": [ ExtResource( 2 ), ExtResource( 3 ), ExtResource( 4 ), ExtResource( 5 ), ExtResource( 6 ), ExtResource( 5 ), ExtResource( 4 ), ExtResource( 3 ) ],
"loop": true,
"name": "locked",
"speed": 40.0
} ]

[sub_resource type="CircleShape2D" id=2]
radius = 17.0

[node name="Gate" type="Node2D"]
script = ExtResource( 1 )

[node name="SpriteSetClosed" type="Node2D" parent="."]

[node name="Closed1" type="AnimatedSprite" parent="SpriteSetClosed"]
modulate = Color( 0.137255, 0, 0.243137, 0.462745 )
frames = SubResource( 1 )
animation = "opening"
offset = Vector2( -1, -1 )

[node name="Closed2" type="AnimatedSprite" parent="SpriteSetClosed"]
modulate = Color( 0.105882, 0, 0.235294, 0.643137 )
rotation = -0.247837
frames = SubResource( 1 )
animation = "locked"
offset = Vector2( -1, -1 )

[node name="Closed3" type="AnimatedSprite" parent="SpriteSetClosed"]
modulate = Color( 0.403922, 0, 0.529412, 0.486275 )
rotation = -0.495674
frames = SubResource( 1 )
animation = "locked"
offset = Vector2( -1, -1 )

[node name="Closed4" type="AnimatedSprite" parent="SpriteSetClosed"]
modulate = Color( 0, 0, 0, 0.486275 )
rotation = -0.678933
scale = Vector2( 0.5, 0.5 )
frames = SubResource( 1 )
animation = "locked"
offset = Vector2( -1, -1 )

[node name="Closed5" type="AnimatedSprite" parent="SpriteSetClosed"]
modulate = Color( 0, 0, 0, 0.486275 )
rotation = -1.07512
scale = Vector2( 0.5, 0.5 )
frames = SubResource( 1 )
animation = "locked"
offset = Vector2( -1, -1 )

[node name="SpriteSetOpen" type="Node2D" parent="."]
visible = false

[node name="Open1" type="Sprite" parent="SpriteSetOpen"]
modulate = Color( 0.392157, 0, 0.784314, 0.454902 )
rotation = -1.31598
scale = Vector2( 1.3, 1.3 )
texture = ExtResource( 19 )

[node name="Open2" type="Sprite" parent="SpriteSetOpen"]
modulate = Color( 0.27451, 0, 0.576471, 0.478431 )
rotation = -0.111701
scale = Vector2( 1.4, 1.4 )
texture = ExtResource( 19 )

[node name="Open3" type="Sprite" parent="SpriteSetOpen"]
modulate = Color( 0.458824, 0, 0.741176, 0.478431 )
rotation = -3.68963
scale = Vector2( 1.4, 1.4 )
texture = ExtResource( 19 )

[node name="OpenFront" type="Sprite" parent="SpriteSetOpen"]
modulate = Color( 0.627451, 0, 1, 1 )
scale = Vector2( 1.2, 1.2 )
texture = ExtResource( 19 )

[node name="Interact" type="Area2D" parent="."]
collision_layer = 32
collision_mask = 47

[node name="CollisionShape2D" type="CollisionShape2D" parent="Interact"]
shape = SubResource( 2 )

[node name="LIFETIME" type="Timer" parent="."]
one_shot = true
[connection signal="animation_finished" from="SpriteSetClosed/Closed1" to="." method="_on_Closed1_animation_finished"]
[connection signal="area_entered" from="Interact" to="." method="_on_Interact_area_entered"]
[connection signal="area_exited" from="Interact" to="." method="_on_Interact_area_exited"]
[connection signal="body_entered" from="Interact" to="." method="_on_Interact_body_entered"]
[connection signal="body_exited" from="Interact" to="." method="_on_Interact_body_exited"]
[connection signal="timeout" from="LIFETIME" to="." method="_on_LIFETIME_timeout"]
